--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="/bower_components/css3-social-signin-buttons/auth-buttons.css">
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <!-- build:css({.tmp,app}) styles/main.css -->
@@ -26,6 +28,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <angellist-login></angellist-login>
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -36,10 +39,11 @@
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
 
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-unstable/angular.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/auth.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <!-- endbuild -->
 
@@ -61,9 +65,7 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular-resource/angular-resource.js"></script>
-        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angular-resource-unstable/angular-resource.js"></script>
         <!-- endbuild -->
 </body>
 </html>
