fixed controllers for compilation and brand link

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#">Startups Cologne!</a>
+          <a class="brand" href="/">Startups Cologne!</a>
 
           <ul class="nav">
             <li ng-class="navBar('/')"><a href="/">Startups</a></li>
@@ -67,14 +67,14 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/auth.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/users.js"></script>
+    <script src="scripts/controllers/jobs.js"></script>
     <script src="scripts/services/accountService.js"></script>
     <script src="scripts/services/startups.js"></script>
     <script src="scripts/services/users.js"></script>
     <script src="scripts/services/jobs.js"></script>
     <script src="scripts/directives/account.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/users.js"></script>
-    <script src="scripts/controllers/jobs.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
