--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <script src="scripts/services/users.js"></script>
     <script src="scripts/services/jobs.js"></script>
     <script src="scripts/directives/account.js"></script>
+    <script src="scripts/directives/pagination.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
