added feed on startpage

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
           <a class="brand" href="/">Startups Cologne!</a>
 
           <ul class="nav">
-            <li ng-class="navBar('/')"><a href="/">Startups</a></li>
+            <li ng-class="navBar('/startups')"><a href="/startups">Startups</a></li>
             <li ng-class="navBar('/users')"><a href="/users">Users</a></li>
             <li ng-class="navBar('/jobs')"><a href="/jobs">Jobs</a></li>
           </ul>
@@ -70,10 +70,12 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/users.js"></script>
     <script src="scripts/controllers/jobs.js"></script>
+    <script src="scripts/controllers/startups.js"></script>
     <script src="scripts/services/accountService.js"></script>
     <script src="scripts/services/startups.js"></script>
     <script src="scripts/services/users.js"></script>
     <script src="scripts/services/jobs.js"></script>
+    <script src="scripts/services/feeds.js"></script>
     <script src="scripts/directives/account.js"></script>
     <script src="scripts/directives/pagination.js"></script>
     <!-- endbuild -->
