--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,8 @@
 
     <footer>
       <div class="container">
-        &copy; Copyright by DMT Holding GmbH
+        Built by <a href="http://d27y.com">D27Y</a>
+         - <a href="https://dl.dropboxusercontent.com/u/900/dmt-impressum.html">Imprint</a>
       </div>
     </footer>
 
@@ -119,15 +120,17 @@
         <!-- endbuild -->
 
     <script>
-      !function(d,s,id){
-        var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-        if(!d.getElementById(id)){
-          js=d.createElement(s);
-          js.id=id;
-          js.src=p+"://platform.twitter.com/widgets.js";
-          fjs.parentNode.insertBefore(js,fjs);
-        }
-      }(document,"script","twitter-wjs")
+      setTimeout(function(){
+        !function(d,s,id){
+          var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+          if(!d.getElementById(id)){
+            js=d.createElement(s);
+            js.id=id;
+            js.src=p+"://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js,fjs);
+          }
+        }(document,"script","twitter-wjs")
+      }, 1000);
     </script>
 
 </body>
