added loading directive to indicate loading/errors

--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,9 @@
             We all love lists, but we here at <a href="http://www.thepiratesinn.com/">The Pirates Inn</a> wanted one for the
             Cologne Startup Scene that kept updating, automatically. At the same time,
             many of us were pleading everyone to create an
-            <a href="http://angel.co">Angelist</a> profile, as it is important
+            <a href="http://angel.co">AngelList</a> profile, as it is important
             irrespective of such a list. Now we married both worlds. This page is
-            built on the Angelist API.<br>
+            built on the AngelList API.<br>
             Now go <a href="https://angel.co/join">register</a>!
           </p>
         </div>
@@ -81,6 +81,7 @@
     </script>
 
     <script src="bower_components/angular-unstable/angular.js"></script>
+    <script src="scripts/vendor/heartcode-canvasloader-min.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -96,6 +97,7 @@
     <script src="scripts/services/feeds.js"></script>
     <script src="scripts/directives/account.js"></script>
     <script src="scripts/directives/pagination.js"></script>
+    <script src="scripts/directives/loading.js"></script>
     <!-- endbuild -->
 
         <!-- build:js scripts/plugins.js -->
