changed relative to absolute path for assets

--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <!-- build:css({.tmp,app}) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
+        <!-- build:css({.tmp,app}) /styles/main.css -->
+        <link rel="stylesheet" href="/styles/main.css">
         <!-- endbuild -->
 </head>
   <body ng-app="startupsCologneApp">
@@ -47,7 +47,7 @@
 
     <div class="container">
       <div class="clearfix header">
-        <img class="pull-left" src="images/pirates.png">
+        <img class="pull-left" src="/images/pirates.png">
         <div>
           <h2>Ahoy all ye Startups!</h2>
           <p>
@@ -80,45 +80,45 @@
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
 
-    <script src="bower_components/angular-unstable/angular.js"></script>
+    <script src="/bower_components/angular-unstable/angular.js"></script>
 
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/auth.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/users.js"></script>
-    <script src="scripts/controllers/jobs.js"></script>
-    <script src="scripts/controllers/startups.js"></script>
-    <script src="scripts/services/accountService.js"></script>
-    <script src="scripts/services/startups.js"></script>
-    <script src="scripts/services/users.js"></script>
-    <script src="scripts/services/jobs.js"></script>
-    <script src="scripts/services/feeds.js"></script>
-    <script src="scripts/directives/account.js"></script>
-    <script src="scripts/directives/pagination.js"></script>
-    <script src="scripts/directives/loading.js"></script>
-    <script src="scripts/vendor/heartcode-canvasloader-min.js"></script>
+    <!-- build:js({.tmp,app}) /scripts/scripts.js -->
+    <script src="/scripts/app.js"></script>
+    <script src="/scripts/auth.js"></script>
+    <script src="/scripts/controllers/main.js"></script>
+    <script src="/scripts/controllers/users.js"></script>
+    <script src="/scripts/controllers/jobs.js"></script>
+    <script src="/scripts/controllers/startups.js"></script>
+    <script src="/scripts/services/accountService.js"></script>
+    <script src="/scripts/services/startups.js"></script>
+    <script src="/scripts/services/users.js"></script>
+    <script src="/scripts/services/jobs.js"></script>
+    <script src="/scripts/services/feeds.js"></script>
+    <script src="/scripts/directives/account.js"></script>
+    <script src="/scripts/directives/pagination.js"></script>
+    <script src="/scripts/directives/loading.js"></script>
+    <script src="/scripts/vendor/heartcode-canvasloader-min.js"></script>
     <!-- endbuild -->
 
-        <!-- build:js scripts/plugins.js -->
-        <script src="bower_components/jquery/jquery.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-alert.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-dropdown.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-tooltip.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-modal.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-transition.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-button.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-popover.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-typeahead.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-carousel.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-scrollspy.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
-        <script src="bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
+        <!-- build:js /scripts/plugins.js -->
+        <script src="/bower_components/jquery/jquery.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-alert.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-dropdown.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-tooltip.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-modal.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-transition.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-button.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-popover.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-typeahead.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-carousel.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-scrollspy.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-collapse.js"></script>
+        <script src="/bower_components/bootstrap-sass/js/bootstrap-tab.js"></script>
         <!-- endbuild -->
 
-        <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular-resource-unstable/angular-resource.js"></script>
+        <!-- build:js /scripts/modules.js -->
+        <script src="/bower_components/angular-resource-unstable/angular-resource.js"></script>
         <!-- endbuild -->
 
 </body>
