--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
 
     <footer>
       <div class="container">
-        Built by <a href="http://d27y.com">D27Y</a>
+        Built by <a href="http://catalyst-zero.com">Catalyst Zero</a>
          - <a href="https://dl.dropboxusercontent.com/u/900/dmt-impressum.html">Imprint</a>
       </div>
     </footer>
